style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;400;500&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: var(--black);
  font-family: "Outfit", serif;
}
html,
body {
  --black: #19151f;
  --white: #fff;
  --offwhite: #f3f3f3;
  --brown: #dcbb9f;
  --grey: #b6b6b6;
  --red: #f57790;
  --lightgreen: #97cb99;
  --darkgreen: #0c2e10;

  height: 100%;
}

/* Rows and Columns */
#container {
  width: 100vw;
  height: 100%;
}
.row {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  padding: 20px;
}
.row:nth-of-type(2n) {
  margin-top: 20px;
}
.subrow {
  display: flex;
  justify-content: space-between;
}
.column {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 0 10px;
}
.column > .widget {
  width: 100%;
}
.row:nth-of-type(1) > .column:nth-of-type(1) {
  width: 400px;
}
.row:nth-of-type(1) > .column:nth-of-type(2) {
  width: 400px;
}
.row:nth-of-type(2) > .column:nth-of-type(1) {
  width: 650px;
}
.row:nth-of-type(2) > .column:nth-of-type(2) {
  width: 350px;
}
.row:nth-of-type(2) > .column:nth-of-type(3) {
  width: 340px;
}

/* Grid */
.grid {
  display: grid;
  grid-template-columns: repeat(20, calc(5% - 1em));
  width: 100vw;
  height:100vh;
  grid-template-rows: repeat(20, calc(5% - 1em));
  gap: 1rem;
  padding: 1rem;
}

/* Utils */
button {
  padding: 15px 30px;
  border: none;
  font-size: 1.2rem;
  font-weight: 400;
  cursor: pointer;
}
.btn-light {
  background-color: var(--offwhite);
}
.btn-dark {
  background-color: var(--black);
  color: var(--white);
}
.input {
  margin: 15px 0;
}
.input > label {
  font-size: 1.2rem;
}
.input > input {
  background-color: var(--offwhite);
  outline: none;
  border: none;
  padding: 20px;
  width: 100%;
  font-size: 1.1rem;
}
h1 {
  font-size: 2.5rem;
  font-weight: 400;
}
h2 {
  font-size: 2.5rem;
  font-weight: 400;
}
h3 {
  font-size: 2.2rem;
  font-weight: 400;
}
h4 {
  font-size: 2rem;
  font-weight: 400;
}
h5 {
  font-size: 1.8rem;
  font-weight: 500;
}
h6 {
  font-size: 1.6rem;
  font-weight: 500;
}
.hero {
  font-size: 1.3rem;
  line-height: 3rem;
  font-weight: 300;
}
.lead {
  font-size: 1.2rem;
  font-weight: 300;
  line-height: 2rem;
}
.grey {
  color: var(--grey);
}

/* Widget Styling */
.widget {
  background-color: var(--white);
  box-shadow: 0 10px 20px 5px rgba(0, 0, 0, 0.2);
  padding: 20px;
}

/* Account widget */
#account {
  grid-column: 1/6;
  grid-row: 1/18;
}
#account > img {
  width: 100%;
  height: 200px;
  margin-bottom: 20px;
  object-fit: cover;
}
#account button {
  width: 100%;
}

/* Weather widget */
#weather {
  display: inline-flex;
  align-items: center;
  justify-content: space-around;
  grid-column:6/12;
  grid-row: 7/10;
}
#weather > button {
  font-size: 1.7rem;
  background-color: var(--offwhite);
  padding: 10px 15px;
  border-radius: 50%;
  box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.3);
}
#weather > i {
  font-size: 1.4rem;
  border: 1px solid var(--grey);
  border-radius: 50%;
  padding: 2px 5px;
  cursor: pointer;
}

/* Payment Widget */
#payment {
  grid-column: 6/12;
  grid-row: 1/7;
}
#payment i {
  position: relative;
}
#payment i::after {
  content: "";
  position: absolute;
  right: 3px;
  top: 3px;
  height: 10px;
  width: 10px;
  border-radius: 50%;
  background-color: var(--red);
}
#payment > h4 {
  display: flex;
  justify-content: space-between;
}
#payment > p {
  margin-top: 20px;
}

/* Current Widget */
#current {
  display: flex;
  justify-content: space-between;
  align-items: center;
  grid-column: 1/6;
  grid-row: 18/21;
}
#current i,
#user > i {
  font-size: 2rem;
}
#current p,
#user > span {
  font-size: 1.2rem;
}

/* Time Widget */
#time {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  position: relative;
  grid-column:6/12;
  grid-row:10/21;
}
#time div {
  background-color: var(--offwhite);
  box-shadow: 8px -9px 39px 0px rgba(0, 0, 0, 0.2);
  height: 250px;
  width: 250px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}
#time > div > div {
  height: 200px;
  width: 200px;
  flex-direction: column;
  border: 5px solid var(--brown);
}
#time h1 {
  color: var(--brown);
}
#time p {
  position: absolute;
  bottom: 40px;
  font-size: 1.2rem;
}

/* Health Widget */
#glucose, #pressure {
  grid-column: 12/16;
}

#temperature, #sleep {
  grid-column: 16/20;
}
#glucose, #temperature{
  grid-row:1/9;
}
#pressure, #sleep {
  grid-row:9/18;
}
.health-widget > .main-icon {
  color: var(--brown);
  font-size: 3.5rem;
}
.health-widget > h5 {
  margin-top: 20px;
}
.health-widget > span {
  display: block;
}
.health-widget > p {
  margin-top: 10px;
  margin-bottom: 15px;
}
.health-widget > span {
  font-size: 1.3rem;
}

/* Upload Widget */
#upload {
  display: inline-flex;
  justify-content: space-between;
  align-items: center;
  grid-column: 12/20;
  grid-row:18/21;
}
#upload > span:nth-of-type(1) {
  display: inline-block;
  font-size: 1.7rem;
  background-color: var(--black);
  padding: 8px 12px;
  border-radius: 50%;
}
#upload > span:nth-of-type(1) > i {
  color: var(--white);
}
#upload > div {
  margin: 0 40px;
}
#upload > div > div {
  display: flex;
  align-items: center;
}
#upload > div > div > span {
  margin-left: 20px;
}
.progress {
  width: 300px;
  height: 10px;
  border-radius: 50rem;
  background-color: var(--offwhite);
  position: relative;
  overflow: hidden;
}
.progress::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 75%;
  background-color: var(--brown);
}
#upload > i {
  font-size: 1.75rem;
  border: 1px solid var(--grey);
  border-radius: 50%;
  padding: 0px 4px;
}

/* Travel Widget */
#travel {
  display: inline-flex;
  align-items: center;
}
#travel p {
  margin: 10px 0;
}
#travel img {
  height: 250px;
  width: 200px;
  object-fit: cover;
  margin-right: 30px;
}

/* Icons Widget */
#icons {
  display: inline-flex;
  justify-content: space-around;
  align-items: center;
  width: 60%;
  margin: 10px;
  margin-left: 0;
}
#icons i {
  font-size: 2rem;
}

/* User Widget */
#user {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 40%;
  margin: 10px 0;
}

/* Blogs Widget */
#blogs {
  padding-left: 0;
  padding-right: 0;
  display: inline-flex;
  justify-content: space-evenly;
}
.blog img {
  width: 300px;
  height: 220px;
  object-fit: cover;
}
.blog span {
  margin-right: 20px;
}

/* Progress Widget */
#progress {
  height: 100%;
}
#progress img {
  width: 100%;
  object-fit: cover;
  height: 300px;
}
#progress span {
  display: inline-block;
  margin-top: 10px;
  font-size: 1.4rem;
  font-weight: 500;
}
#progress h3 {
  color: var(--brown);
}
#progress p {
  margin: 30px 0;
}

/* Travel Widget */
#ticket {
  display: inline-block;
}
#badge {
  display: inline-block;
  font-size: 1.2rem;
  padding: 2px 5px;
  background-color: var(--lightgreen);
  color: var(--darkgreen);
}
#ticket > h2 {
  margin: 30px 0;
}
#ticket button {
  margin: 0 4px;
  margin-top: 30px;
}

/* Map Widget */
#map img {
  width: 100%;
  height: 120px;
  object-fit: cover;
}
#map p {
  margin-top: 15px;
  font-size: 1.2rem;
  display: flex;
  justify-content: space-between;
}

